Refactor and add tests to Catalogo